manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-ticker
  labels:
    app: stock-ticker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stock-ticker
  template:
    metadata:
      labels:
        app: stock-ticker
    spec:
      containers:
      - name: server
        image: quay.io/matthew_staebler/stock-ticker:latest
        ports:
        - name: api
          containerPort: 80
