manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker
spec:
  selector:
    app: stock-ticker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
