manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ticker
spec:
  rules:
  - host: HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stock-ticker
            port:
              number: 80
